@@ -1,8 +1,6 @@
 package com.hifumi123.ga4j;
 
-import java.util.List;
-
 public interface DataCollector {
-
-	public void collectData(List<AbstractIndividual> individuals, int generation);
+	
+	public void collectData(Population population, int generation);
 }
