@@ -1,10 +1,8 @@
 package com.hifumi123.ga4j.mutation;
 
-import java.util.List;
-
-import com.hifumi123.ga4j.AbstractIndividual;
+import com.hifumi123.ga4j.Population;
 
 public interface MutationOperator {
-
-	public void mutate(List<AbstractIndividual> individuals, double probabilityOfMutation);
+	
+	public void mutate(Population population, double probabilityOfMutation);
 }
