@@ -1,9 +1,9 @@
 package com.hifumi123.ga4j.mutation;
 
-import java.util.List;
 import java.util.Random;
 
 import com.hifumi123.ga4j.AbstractIndividual;
+import com.hifumi123.ga4j.Population;
 
 public class SimpleMutation implements MutationOperator {
 
@@ -12,15 +12,18 @@ public class SimpleMutation implements MutationOperator {
 	public SimpleMutation() {
 		random = new Random();
 	}
-	
+
 	@Override
-	public void mutate(List<AbstractIndividual> individuals, double probabilityOfMutation) {
-		for (AbstractIndividual individual : individuals)
-			for (int i = 0; i < individual.getChromosome().getLength(); i++) {
+	public void mutate(Population population, double probabilityOfMutation) {
+		for (int i = 0; i < population.sizeOfEvolvingGroup(); i++) {
+			AbstractIndividual individual = population.getFromEvolvingGroup(i);
+			
+			for (int j = 0; j < individual.getChromosome().getLength(); j++) {
 				double p = random.nextDouble();
 				
 				if (p < probabilityOfMutation)
-					individual.getChromosome().mutate(i);
+					individual.getChromosome().mutate(j);
 			}
+		}
 	}
 }
