@@ -8,16 +8,23 @@ import com.hifumi123.ga4j.AbstractIndividual;
 import com.hifumi123.ga4j.Population;
 import com.hifumi123.ga4j.exception.NegativeFitnessException;
 
-public class ProportionalModelSelection implements SelectionOperator {
-
+public class ElitistProportionalModelSelection implements SelectionOperator {
+	
 	private Random random;
 	
-	public ProportionalModelSelection() {
+	public ElitistProportionalModelSelection() {
 		random = new Random();
 	}
-	
+
 	@Override
 	public void select(Population population) throws NegativeFitnessException {
+		int bestIndexInEvolvingGroup = population.searchBestIndividualIndexInEvolvingGroup();
+		
+		if (population.sizeOfRemainedGroup() < 1) {
+			AbstractIndividual best = population.removeFromEvolvingGroup(bestIndexInEvolvingGroup);
+			population.addToRemainedGroup(best);
+		}
+		
 		double totalFitness = 0;
 		
 		for (int i = 0; i < population.sizeOfEvolvingGroup(); i++) {
@@ -49,9 +56,30 @@ public class ProportionalModelSelection implements SelectionOperator {
 		
 		population.replaceEvolvingGroup(newGroup);
 	}
-	
+
 	@Override
-	public void survival(Population population) {}
+	public void survival(Population population) {
+		int bestIndexInEvolvingGroup = population.searchBestIndividualIndexInEvolvingGroup();
+		
+		AbstractIndividual bestCandidate = population.getFromEvolvingGroup(bestIndexInEvolvingGroup);
+		AbstractIndividual best = population.getFromRemainedGroup(0);
+		
+		if (bestCandidate.getFitness() > best.getFitness()) {
+			population.removeFromEvolvingGroup(bestIndexInEvolvingGroup);
+			population.removeFromRemainedGroup(0);
+			
+			population.addToEvolvingGroup(best);
+			population.addToRemainedGroup(bestCandidate);
+		}
+		
+		int worstIndexInEvolvingGroup = population.searchWorstIndividualIndexInEvolvingGroup();
+		population.removeFromEvolvingGroup(worstIndexInEvolvingGroup);
+		try {
+			population.addToEvolvingGroup((AbstractIndividual) population.getFromRemainedGroup(0).clone());
+		} catch (CloneNotSupportedException e) {
+			e.printStackTrace();
+		}
+	}
 	
 	private int selectOne(double[] cumulativeFitnesses) {
 		double p = random.nextDouble();
