@@ -1,5 +1,13 @@
 0.2.0 相对 0.1.0 的改动：
 1、删除 AbstractGeneticAlgorithm 的 getBestFitnessList 和 getMeanFitnessList 方法。现在所有统计数据全部使用 DataCollector 获得，算法不再提供。
 2、POM 文件中增加 maven-source-plugin 配置。
-3、修复适应度为负数时算法运行不正常的错误。现在，适应度为负数时会抛出异常。
-4、AbstractGeneticAlgorithm 的 getBestIndividual 方法现在返回的是所有代中适应度最好的个体，而不是最后一代中适应度最好的个体。此修正不会影响 ElitistModelGeneticAlgorithm 的运行结果，因为其最后一代中适应度最好的个体就是所有代中适应度最好的个体。
+3、修复适应度为负数时算法运行不正常的错误。现在，适应度为负数时会抛出 NegativeFitnessException 异常。
+4、AbstractGeneticAlgorithm 的 getBestIndividual 方法现在返回的是所有代中适应度最好的个体，而不是最后一代中适应度最好的个体。
+5、新增表示种群的 Population 类。
+6、重写 SimpleGeneticAlgorithm 类。现在，SimpleGeneticAlgorithm 完全由各项参数确定具体行为。
+7、修改 SelectionOperator 中的 select 方法的定义，以适应新的 Population 类。在 SelectionOperator 中添加 survival 方法，以适应新的 SimpleGeneticAlgorithm 类。
+8、新增 ElitistProportionalModelSelection 类，实现能够保存最优的比例选择。
+9、修改 CrossoverOperator 中的 cross 方法的定义，以适应新的 Population 类。
+10、修改 MutationOperator 中的 mutate 方法的定义，以适应新的 Population 类。
+11、删除 ElitistModelGeneticAlgorithm，现由 SimpleGeneticAlgorithm 和 ElitistProportionalModelSelection 来实现。
+12、修改 DataCollector 中的 collectData 方法的定义，以适用新的 Population 类。
